--- a/partners.html
+++ b/partners.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="partners.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -25,7 +27,7 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-sm">
+    <!-- <nav class="navbar navbar-expand-sm">
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="home.html">
@@ -42,7 +44,32 @@
                 <button id="register" class="btn btn-primary navbar-btn">Register</button>
 
         </div>
-    </nav>
+    </nav> -->
+
+
+
+
+    <header>
+        <div class="container">
+            <nav>
+                <img src="images/axiomGreenPNG.png" class="logo" />
+                <button class="hamburger" id="hamburger">
+                    <i class="fas fa-bars"></i>
+                </button>
+                <ul class="nav-ul" id="nav-ul">
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="candidates.html">Candidates</a></li>
+                    <li><a href="clients.html">Clients</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="partners.html">Partners</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+                <button type="button" class="btn btn-primary" id="btn-register">Register</button>
+            </nav>
+        </div>
+    </header>
+
+
     <hr class="thick-hr" />
 
 
@@ -176,7 +203,14 @@
     </footer>
 
 
+    <script>
+        const hamburger = document.getElementById('hamburger');
+        const navUl = document.getElementById('nav-ul');
 
+        hamburger.addEventListener('click', () => {
+            navUl.classList.toggle('show');
+        })
+    </script>
 
 
 
